gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail21832.d
version https://git-lfs.github.com/spec/v1
oid sha256:056a575d194cd9c09384fff3ed081f58be9c70a0b941f95bd84a9a44a4dcb25a
size 442
